# video2gif

./: .gitignore  README.md  gui.py  launcher.py  requirements.txt  setup.cfg  setup.py  video2gif.spec
.github/workflows/: release.yml
