[metadata]
name = video2gif
version = attr: video2gif.__version__
description = A GUI tool to convert videos to GIF
long_description = file: README.md
long_description_content_type = text/markdown
author = woodchen
author_email = wood@czl.net
url = https://github.com/woodchen-ink/video2gif

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ffmpeg-python>=0.2.0
    Pillow>=9.0.0
    tkinterdnd2>=0.3.0
